--- a/frontend/components/spendingLens.css
+++ b/frontend/components/spendingLens.css
@@ -7,7 +7,7 @@
     padding: 20px;
     border-radius: 20px;
     width: 100%;
-    max-width: 900px;
+    /* max-width: 900px; */
     margin: 0 auto;
     overflow: hidden;
 }
@@ -21,6 +21,7 @@
     background: #ffffff;
     box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.1);
     height: 500px;
+    /* width: 700px; */
     margin: 0;
 }
 
